# craftinginterpreters_joey

cpplox/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  general.h  lox.cpp  scanner.h  token.h  token_type.h
cpplox/exprs/: expr.cpp  expr.h
cpplox/exprs_test/: expr.cpp  expr.h
cpplox/src/: environment.cpp  environment.h  expr.cpp  expr.h  expr.ixx  general.h  lox.cpp  lox.h  main.cpp  parser.cpp  parser.h  runtime_error.cpp  runtime_error.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.h  value.cpp  value.h
cpplox/src/asts/: expr.cpp  expr.h  stmt.cpp  stmt.h
cpplox/src/exprs/: expr.cpp  expr.h
cpplox/src/exprs_scratch/: expr.h
cpplox/src/scratch/: expr_module.ixx
cpplox/src/tools/: ast_generator.cpp  ast_generator.h  ast_module_generator.cpp  ast_printer.cpp
cpplox/src/tools/ast_module_generator/: ast_module_generator.cpp
cpplox/src/tools/visitor_examples/: visitor_examples.cpp
cpplox/src/utilities/: lox_readline.cpp  lox_readline.h
cpplox/src/visitors/: interpreter.cpp  interpreter.h
cpplox/src/visitors/examples/: ast_printer.cpp  ast_printer.h  rpn_printer.cpp  rpn_printer.h
jlox/: .gitignore
jlox/com/craftinginterpreters/lox/: Lox.java
